# lassoinf

./: .gitignore  .gitmodules  GEMINI.md~  LICENSE  README.md  Truncated Gaussian.ipynb  abstract-nonsense.tex  coordinate-free.tex  efron-hinkley.tex  homotopy.py  homotopy2.py  irrepresentable.tex  lasso.tex  meson.build  peak-inference-second-order-notes.tex  pivots.tex  pyproject.toml  selected_lasso.py  tests.py  truncated_gaussian.py
.github/workflows/: build_wheel.yml  docs.yml  test.yml
R/: RcppExports.cpp  lassoinf.R
R/src/: Makevars  bindings.cpp
R/tests/testthat/: test_discrete_family.R  test_gaussian_family.R
R_pkg/: DESCRIPTION  NAMESPACE
R_pkg/R/: lassoinf.R
R_pkg/man/: LassoInference.Rd  TruncBivariateNormal.Rd
R_pkg/src/: Makevars  RcppExports.cpp  bindings.cpp
R_pkg/tests/: testthat.R
R_pkg/tests/testthat/: test_affine_constraints.R  test_bivariate_normal.R  test_selective_inference.R
cpp/include/: affine_constraints.hpp  discrete_family.h  gaussian_family.hpp  lassoinf.hpp  selective_inference.hpp
cpp/src/: affine_constraints.cpp  discrete_family.cpp  gaussian_family.cpp  lasso_post_selection_constraints.cpp  lassoinf.cpp  lassoinf_py.cpp  selective_inference.cpp
docs/: .gitignore  discrete_family.ipynb  discrete_family.md  file_drawer.ipynb  file_drawer.md  foo.ipynb  foo.md  gaussian_lasso.md  gaussian_lasso_boot.md  gaussian_lasso_no_random.md  gaussian_lasso_ridge.md  gemini.py  gemini.py~  install.md  logistic_lasso.ipynb  logistic_lasso.md  main.ipynb  main.md  main.md~  myst.yml  quadratic_approx_lasso.ipynb  quadratic_approx_lasso.md  refs.bib
docs/sandbox/: misc.md
lassoinf/: __init__.py  homotopy.py  lassoinf.py  selected_lasso.py
python/: discrete_family_py.cpp  gaussian_family_py.cpp  lassoinf_py.cpp
python/lassoinf/: __init__.py  affine_constraints.py  bivariate_normal.py  discrete_family.py  extract.py  gaussian_family.py  gaussian_family.py~  glmnet.py  lasso.py  selective_inference.py
python/lassoinf/operators/: __init__.py  composite.py  submatrix.py  xtvx.py
tests/: test_affine_constraints.py  test_affine_constraints.py~  test_bivariate_normal.py  test_coverage.py  test_custom_inference.py  test_discrete_family.py  test_file_drawer.py  test_gaussian_family.py  test_gaussian_lasso.py  test_gaussian_lasso.py~  test_glmnet_kkt.py  test_logistic_lasso.py  test_operators.py  test_prox_map.py  test_selective_inference.py  test_sparse_lowrank.py  test_vectorize.py
