[build-system]
requires = ["meson-python", "pybind11", "ninja"]
build-backend = "mesonpy"

[project]
name = "lassoinf"
version = "0.1.0"
description = "Selective inference tools"
authors = [
    { name = "Jonathan Taylor" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
test = ['pytest',
        'pandas',
        "joblib"]
dev = [
    "pytest",
    "scipy",
    "ninja",
    "meson",
    "meson-python",
    "pybind11",
    "setuptools_scm"
]
doc = [
    "jupytext",
    "jupyter-book",
    "matplotlib",
    "rpy2"
]
