[build-system]
requires = ["meson-python", "pybind11", "ninja", "setuptools_scm"]
build-backend = "mesonpy"

[project]
readme = "README.md"
keywords = ["Selective inference for LASSO"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
maintainers = [
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" }
]
name = "lassoinf"
dynamic = ["version"]
description = "Selective inference tools"
authors = [
    {name = "Jonathan Taylor", email="jonathan.taylor@stanford.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pylops"
]

[project.optional-dependencies]
test = ['pytest',
        'pandas',
        "joblib",
	"cvxpy",
	"coxdev==0.1.4",
	"glmstar"]
dev = [
    "pytest",
    "scipy",
    "ninja",
    "meson",
    "meson-python",
    "pybind11",
    "setuptools_scm"
]
doc = [
    "jupytext",
    "jupyter-book",
    "matplotlib",
    "rpy2",
    "cvxpy"
]


[tool.setuptools_scm]
# This will use the latest git tag for the version
